--- a/index.html
+++ b/index.html
@@ -4,9 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Garden Services near me, Plants updates, Green environment">
+    <meta name="keywords" content="Gardening, Garden design, Garden Maintenance, Plant news">
+    <meta name="author" content="Green Space">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Green Space</title>
 </head>
 <body>
-    
+    <header>
+        Logo and Navigation links
+    </header>
+
+    <section>
+        Hero image, Brand Message and a quote button
+    </section>
+
+    <section>
+        Services we offer
+    </section>
+
+    <section>
+        Blog section
+    </section>
+
+    <section>
+        How to contact us
+    </section>
+
+    <section>
+        Location Map
+    </section>
+
+    <footer>
+        Subscribe to our letters
+        Social media links
+        Copyright message
+    </footer>
 </body>
 </html>
