Add header content and style

--- a/index.html
+++ b/index.html
@@ -12,7 +12,25 @@
 </head>
 <body>
     <header>
-        Logo and Navigation links
+        <div id="logocontainer">
+            <a href="index.html" aria-label="Go to the main page">
+                <img src="assets/images/logo1.webp" id="logo" alt="site's logo">
+                <h1 id="name">Green Space</h1>
+            </a>
+        </div>
+        <nav id="menucontainer">
+            <ul id="menu">
+                <li>
+                    <a href="index.html" aria-label="Go to the main page" class="active">Home</a>
+                </li>
+                <li>
+                    <a href="services.html" aria-label="Go to service page">Services</a>
+                </li>
+                <li>
+                    <a href="#" aria-label="Go to the contact page">Contact Us</a>
+                </li>
+            </ul>
+        </nav>
     </header>
 
     <section>
