Add images and styled with animation

--- a/index.html
+++ b/index.html
@@ -33,9 +33,19 @@
         </nav>
     </header>
 
-    <section>
-        Hero image, Brand Message and a quote button
+    <section id="image-cont">
+            <div style="background-image: url(assets/images/slide01.webp);"></div>
+            <div style="background-image: url(assets/images/manwork.webp);"></div>
+            <div style="background-image: url(assets/images/summerpark-2.webp);"></div>
+            <div style="background-image: url(assets/images/pexels-photo-70069.webp);"></div>
+        </div> 
+
+        <div id="brandCall">
+            <h1 id="brand-name">Experience creativity and newness around you</h1>
+            <button>Get a Quote</button>
+        </div>
     </section>
+    
 
     <section>
         Services we offer
