Add the cover message and a button

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     </header>
 
     <section id="image-cont">
+        <div id="slides">
             <div style="background-image: url(assets/images/slide01.webp);"></div>
             <div style="background-image: url(assets/images/manwork.webp);"></div>
             <div style="background-image: url(assets/images/summerpark-2.webp);"></div>
@@ -41,8 +42,8 @@
         </div> 
 
         <div id="brandCall">
-            <h1 id="brand-name">Experience creativity and newness around you</h1>
-            <button>Get a Quote</button>
+            <h1 id="brand-me">Experience creativity and newness around you</h1>
+            <button id="quote">Get a Quote</button>
         </div>
     </section>
     
