Add the service section details and style

--- a/index.html
+++ b/index.html
@@ -43,13 +43,49 @@
 
         <div id="brandCall">
             <h1 id="brand-me">Experience creativity and newness around you</h1>
-            <button id="quote">Get a Quote</button>
+            <button id="quote">Get a Quote <i class="fa-solid fa-chevron-right"></i></button>
         </div>
     </section>
     
 
-    <section>
-        Services we offer
+    <section id="contentbox">
+        <h2 id="subheader"><span>Our</span> Services</h2>
+
+        <div id="statedlist">
+            <div class="content1">
+                <img src="assets/images/slide2.webp" class="image" alt="" aria-labelledby="Picture of a mowing machine at work">
+                <h3 class="subject">Bed Renovation</h3>
+                <p>
+                    Renovating a bed needs a lot of attention and detail. Whether is is for plant, flower or lawn, we will renovate your bed with every needed detail.
+                </p>
+            </div>
+
+            <div class="content1">
+                <img src="assets/images/mulch.webp" class="image" alt="" aria-labelledby="Picture of a man applying mulch to his garden">
+                <h3 class="subject">Mulching and Prunning</h3>
+                <p>
+                    Mulching and prunning are main steps to maintaining your plants. It is a sure way of ensuring plant sustainance.
+                </p>  
+            </div>
+
+            <div class="content1">
+                <img src="assets/images/slide3.webp" class="image" alt="" aria-labelledby="Picture of a newly installed lawn">
+                <h3 class="subject">Lawn Installation</h3>
+                <p>
+                    We provide all the services from land preparation, fertilizer application up to planting.
+                </p>
+            </div>
+
+            <div class="content1">
+                <img src="assets/images/gallery4.webp" class="image" alt="" aria-labelledby="Picture of a wheelbarrow containeing fallen leaves">
+                <h3 class="subject">Seasonal Maintenance</h3>
+                <p>
+                    Special maintenance of plants in spring and fall available. Providing plants with their nutritional needs for sustainability.
+                </p>
+            </div>
+
+        </div>
+    
     </section>
 
     <section>
@@ -69,5 +105,6 @@
         Social media links
         Copyright message
     </footer>
+    <script src="https://kit.fontawesome.com/68d4741fb5.js" crossorigin="anonymous"></script>
 </body>
 </html>
