--- a/index.html
+++ b/index.html
@@ -88,8 +88,46 @@
     
     </section>
 
-    <section>
-        Blog section
+    <section id="blog">
+          <h2 id="blogheader">Our <span>Blog</span></h2>
+
+          <div id="blogcontent">
+                <div class="bloghighlight">
+                    <img src="assets/images/gallery3.webp" class="blogimage" alt="" aria-labelledby="Picture representing mulching to flowers">
+                    <h4>Maintaining a clean lawn</h4>
+                    <i class="fa-regular fa-comment"></i>
+                    <span>2</span>
+                    <i class="fa-regular fa-heart"></i>
+                    <span>3</span>
+                    <button class="readmore">Read More</button>
+                </div>
+                <div class="bloghighlight">
+                    <img src="assets/images/justgarden.webp" class="blogimage" alt="" aria-labelledby="Keeping garden tools preserved">
+                    <h4>Protecting wildlife</h4>
+                    <i class="fa-regular fa-comment"></i>
+                    <span>2</span>
+                    <i class="fa-regular fa-heart"></i>
+                    <span>3</span>
+                    <button class="readmore">Read more</button>
+                </div>
+                <div class="bloghighlight">
+                    <img src="assets/images/watering.webp" class="blogimage" alt="" aria-labelledby="Garden bed">
+                    <h4>Water requirements</h4>
+                    <i class="fa-regular fa-comment"></i>
+                    <span>2</span>
+                    <i class="fa-regular fa-heart"></i>
+                    <span>3</span>
+                    <button class="readmore">Read More</button>
+                </div>
+                <div class="bloghighlight">
+                    <img src="assets/images/madeup.webp" class="blogimage" alt="Benefits of tree planting">
+                    <h4>Beautifying our environment</h4>
+                    <i class="fa-regular fa-comment"></i>
+                    <span>2</span>
+                    <i class="fa-regular fa-heart"></i>
+                    <span>3</span>
+                    <button class="readmore">Read More</button>
+            </div>
     </section>
 
     <section>
