--- a/index.html
+++ b/index.html
@@ -131,7 +131,22 @@
     </section>
 
     <section>
-        How to contact us
+        <div>
+            <h2><span>Get in</span> touch</h2>
+            <p>Want to get in touch? We will love to hear from you. Here's how you can reach us...</p>
+        </div>
+        <aside>
+            <i class="fa-solid fa-phone"></i>
+            <h4>Call us</h4>
+            <p><a href="tel:+44 755 26 56621">+44 755 26 56621</a></p>
+        </aside>
+
+        <aside>
+            <i class="fa-regular fa-message"></i>
+            <h4>Mail Us</h4>
+            <p>tye@greenspace.uk.org</p>
+        </aside>
+    
     </section>
 
     <section>
