--- a/index.html
+++ b/index.html
@@ -130,18 +130,18 @@
             </div>
     </section>
 
-    <section>
-        <div>
-            <h2><span>Get in</span> touch</h2>
+    <section id="contact">
+        <div id="subject">
+            <h2 id="subsubject"><span>Get in</span> touch</h2>
             <p>Want to get in touch? We will love to hear from you. Here's how you can reach us...</p>
         </div>
-        <aside>
+        <aside id="contact1">
             <i class="fa-solid fa-phone"></i>
             <h4>Call us</h4>
             <p><a href="tel:+44 755 26 56621">+44 755 26 56621</a></p>
         </aside>
 
-        <aside>
+        <aside id="contact2">
             <i class="fa-regular fa-message"></i>
             <h4>Mail Us</h4>
             <p>tye@greenspace.uk.org</p>
