--- a/index.html
+++ b/index.html
@@ -150,13 +150,33 @@
     </section>
 
     <section id="mapspace">
-        <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2397.587676963584!2d-2.9900315!3d53.0637157!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487ac6e85f77f82f%3A0x4a288f6465a4a635!2sChester%20Rd%2C%20Wrexham%20LL12%208DW!5e0!3m2!1sen!2suk!4v1676048990175!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2397.587676963584!2d-2.9900315!3d53.0637157!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487ac6e85f77f82f%3A0x4a288f6465a4a635!2sChester%20Rd%2C%20Wrexham%20LL12%208DW!5e0!3m2!1sen!2suk!4v1676048990175!5m2!1sen!2suk" title="map showing the location" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
 
     <footer>
-        Subscribe to our letters
-        Social media links
-        Copyright message
+            <div>
+                 <label for="subscribe">Subscribe to our Newsletter:</label>
+                <input id="subscribe" type="email" name="subscribe" placeholder="Subscribe">
+                <button type="submit" id="subscribebtn">Submit</button>
+            </div>
+    
+            <ul>
+                <li>
+                   <a href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="Find us on Facebook (link opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+                </li>
+                <li>
+                    <a href="https://www.instagram.com" target="_blank" rel="noopener" aria-label="Find us on Instagram (link opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
+                </li>
+                <li>
+                    <a href="https://www.twitter.com" target="_blank" rel="noopener" aria-label="Find us on Twitter (link opens in a new tab)"><i class="fa-brands fa-twitter"></i></a>
+                </li>
+            </ul>
+    
+            <div>
+                <p>
+                     <i class="fa-regular fa-copyright"></i>  BelovedPearl 2023
+                </p>
+            </div>
     </footer>
     <script src="https://kit.fontawesome.com/68d4741fb5.js" crossorigin="anonymous"></script>
 </body>
