Add footer style

--- a/index.html
+++ b/index.html
@@ -154,13 +154,13 @@
     </section>
 
     <footer>
-            <div>
+            <div id="actioncall">
                  <label for="subscribe">Subscribe to our Newsletter:</label>
                 <input id="subscribe" type="email" name="subscribe" placeholder="Subscribe">
                 <button type="submit" id="subscribebtn">Submit</button>
             </div>
     
-            <ul>
+            <ul id="sociallinks">
                 <li>
                    <a href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="Find us on Facebook (link opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
                 </li>
@@ -172,7 +172,7 @@
                 </li>
             </ul>
     
-            <div>
+            <div id="copyright">
                 <p>
                      <i class="fa-regular fa-copyright"></i>  BelovedPearl 2023
                 </p>
