--- a/index.html
+++ b/index.html
@@ -55,33 +55,37 @@
             <div class="content1">
                 <img src="assets/images/slide2.webp" class="image" alt="" aria-labelledby="Picture of a mowing machine at work">
                 <h3 class="subject">Bed Renovation</h3>
-                <p>
+                <p >
                     Renovating a bed needs a lot of attention and detail. Whether is is for plant, flower or lawn, we will renovate your bed with every needed detail.
                 </p>
+                <a href="#">Contact Us <i class="fa-solid fa-chevron-right"></i></a>
             </div>
 
             <div class="content1">
                 <img src="assets/images/mulch.webp" class="image" alt="" aria-labelledby="Picture of a man applying mulch to his garden">
                 <h3 class="subject">Mulching and Prunning</h3>
-                <p>
+                <p class="subjectdetail">
                     Mulching and prunning are main steps to maintaining your plants. It is a sure way of ensuring plant sustainance.
-                </p>  
+                </p> 
+                <a href="#">Contact Us <i class="fa-solid fa-chevron-right"></i></a> 
             </div>
 
             <div class="content1">
                 <img src="assets/images/slide3.webp" class="image" alt="" aria-labelledby="Picture of a newly installed lawn">
                 <h3 class="subject">Lawn Installation</h3>
-                <p>
+                <p class="subjectdetail">
                     We provide all the services from land preparation, fertilizer application up to planting.
                 </p>
+                <a href="#">Contact Us <i class="fa-solid fa-chevron-right"></i></a>
             </div>
 
             <div class="content1">
                 <img src="assets/images/gallery4.webp" class="image" alt="" aria-labelledby="Picture of a wheelbarrow containeing fallen leaves">
                 <h3 class="subject">Seasonal Maintenance</h3>
-                <p>
+                <p class="subjectdetail">
                     Special maintenance of plants in spring and fall available. Providing plants with their nutritional needs for sustainability.
                 </p>
+                <a href="#">Contact Us <i class="fa-solid fa-chevron-right"></i></a>
             </div>
 
         </div>
@@ -156,7 +160,7 @@
     <footer>
             <div id="actioncall">
                  <label for="subscribe">Subscribe to our Newsletter:</label>
-                <input id="subscribe" type="email" name="subscribe" placeholder="Subscribe">
+                <input id="subscribe" type="email" name="subscribe" placeholder="Enter your Email">
                 <button type="submit" id="subscribebtn">Submit</button>
             </div>
     
