--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
                 <img src="assets/images/slide2.webp" class="image" alt="" aria-labelledby="Picture of a mowing machine at work">
                 <h3 class="subject">Bed Renovation</h3>
                 <p >
-                    Renovating a bed needs a lot of attention and detail. Whether is is for plant, flower or lawn, we will renovate your bed with every needed detail.
+                    Renovating a bed needs a lot of attention and detail for plant, flower or lawn
                 </p>
                 <a href="#">Contact Us <i class="fa-solid fa-chevron-right"></i></a>
             </div>
 
             <div class="content1">
                 <img src="assets/images/mulch.webp" class="image" alt="" aria-labelledby="Picture of a man applying mulch to his garden">
-                <h3 class="subject">Mulching and Prunning</h3>
+                <h3 class="subject">Mulching</h3>
                 <p class="subjectdetail">
-                    Mulching and prunning are main steps to maintaining your plants. It is a sure way of ensuring plant sustainance.
+                    Mulching is a major step to maintaining your plants. It is a sure way of ensuring plant sustainance.
                 </p> 
                 <a href="#">Contact Us <i class="fa-solid fa-chevron-right"></i></a> 
             </div>
@@ -81,9 +81,9 @@
 
             <div class="content1">
                 <img src="assets/images/gallery4.webp" class="image" alt="" aria-labelledby="Picture of a wheelbarrow containeing fallen leaves">
-                <h3 class="subject">Seasonal Maintenance</h3>
+                <h3 class="subject">Seasonal Care</h3>
                 <p class="subjectdetail">
-                    Special maintenance of plants in spring and fall available. Providing plants with their nutritional needs for sustainability.
+                    Maintenance of plants in spring and fall available. Providing plants with all needs for sustainability.
                 </p>
                 <a href="#">Contact Us <i class="fa-solid fa-chevron-right"></i></a>
             </div>
