--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <a href="services.html" aria-label="Go to service page">Services</a>
                 </li>
                 <li>
-                    <a href="#" aria-label="Go to the contact page">Contact Us</a>
+                    <a href="contact.html" aria-label="Go to the contact page">Contact Us</a>
                 </li>
             </ul>
         </nav>
