Connect links to the appropriate page

--- a/services.html
+++ b/services.html
@@ -96,7 +96,7 @@
                 <div>
                     <h3>Sales</h3>
                     <p>
-                        If you are in need of plants to build up your green area, we supply healthy, carefully selected plants.<a href="#">Contact Us</a> to make your booking (Contact Us).
+                        If you are in need of plants to build up your green area, we supply healthy, carefully selected plants.<a href="contact.html">Contact Us</a> to make your bookings.
                     </p>
                 </div>
             </div>
