--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <p >
                     Renovating a bed needs a lot of attention and detail for plant, flower or lawn
                 </p>
-                <a href="#">Contact Us <i class="fa-solid fa-chevron-right"></i></a>
+                <a href="contact.html">Contact Us <i class="fa-solid fa-chevron-right"></i></a>
             </div>
 
             <div class="content1">
@@ -67,7 +67,7 @@
                 <p class="subjectdetail">
                     Mulching is a major step to maintaining your plants. It is a sure way of ensuring plant sustainance.
                 </p> 
-                <a href="#">Contact Us <i class="fa-solid fa-chevron-right"></i></a> 
+                <a href="contact.html">Contact Us <i class="fa-solid fa-chevron-right"></i></a> 
             </div>
 
             <div class="content1">
@@ -76,7 +76,7 @@
                 <p class="subjectdetail">
                     We provide all the services from land preparation, fertilizer application up to planting.
                 </p>
-                <a href="#">Contact Us <i class="fa-solid fa-chevron-right"></i></a>
+                <a href="contact.html">Contact Us <i class="fa-solid fa-chevron-right"></i></a>
             </div>
 
             <div class="content1">
@@ -85,7 +85,7 @@
                 <p class="subjectdetail">
                     Maintenance of plants in spring and fall available. Providing plants with all needs for sustainability.
                 </p>
-                <a href="#">Contact Us <i class="fa-solid fa-chevron-right"></i></a>
+                <a href="contact.html">Contact Us <i class="fa-solid fa-chevron-right"></i></a>
             </div>
 
         </div>
