Changed some html content and add responsiveness for width less than 1200

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </p> 
                 <a href="contact.html">Contact Us <i class="fa-solid fa-chevron-right"></i></a> 
             </div>
-
+        <!--
             <div class="content1">
                 <img src="assets/images/slide3.webp" class="image" alt="" aria-labelledby="Picture of a newly installed lawn">
                 <h3 class="subject">Lawn Installation</h3>
@@ -78,6 +78,7 @@
                 </p>
                 <a href="contact.html">Contact Us <i class="fa-solid fa-chevron-right"></i></a>
             </div>
+        -->
 
             <div class="content1">
                 <img src="assets/images/gallery4.webp" class="image" alt="" aria-labelledby="Picture of a wheelbarrow containeing fallen leaves">
@@ -96,6 +97,7 @@
           <h2 id="blogheader">Our <span>Blog</span></h2>
 
           <div id="blogcontent">
+            <!--
                 <div class="bloghighlight">
                     <img src="assets/images/gallery3.webp" class="blogimage" alt="" aria-labelledby="Picture representing mulching to flowers">
                     <h4>Maintaining a clean lawn</h4>
@@ -105,32 +107,39 @@
                     <span>3</span>
                     <button class="readmore">Read More</button>
                 </div>
+            -->
                 <div class="bloghighlight">
                     <img src="assets/images/justgarden.webp" class="blogimage" alt="" aria-labelledby="Keeping garden tools preserved">
-                    <h4>Protecting wildlife</h4>
-                    <i class="fa-regular fa-comment"></i>
-                    <span>2</span>
-                    <i class="fa-regular fa-heart"></i>
-                    <span>3</span>
-                    <button class="readmore">Read more</button>
+                    <div>
+                        <h4>Protecting wildlife</h4>
+                        <i class="fa-regular fa-comment"></i>
+                        <span>2</span>
+                        <i class="fa-regular fa-heart"></i>
+                        <span>3</span>
+                        <button class="readmore">Read more</button>
+                    </div>
                 </div>
                 <div class="bloghighlight">
                     <img src="assets/images/watering.webp" class="blogimage" alt="" aria-labelledby="Garden bed">
-                    <h4>Water requirements</h4>
-                    <i class="fa-regular fa-comment"></i>
-                    <span>2</span>
-                    <i class="fa-regular fa-heart"></i>
-                    <span>3</span>
-                    <button class="readmore">Read More</button>
+                    <div>
+                       <h4>Water requirements</h4>
+                       <i class="fa-regular fa-comment"></i>
+                       <span>2</span>
+                       <i class="fa-regular fa-heart"></i>
+                       <span>3</span>
+                       <button class="readmore">Read More</button>
+                    </div>
                 </div>
                 <div class="bloghighlight">
                     <img src="assets/images/madeup.webp" class="blogimage" alt="Benefits of tree planting">
-                    <h4>Beautifying our environment</h4>
-                    <i class="fa-regular fa-comment"></i>
-                    <span>2</span>
-                    <i class="fa-regular fa-heart"></i>
-                    <span>3</span>
-                    <button class="readmore">Read More</button>
+                    <div>
+                        <h4>Ideas for beginners</h4>
+                        <i class="fa-regular fa-comment"></i>
+                        <span>2</span>
+                        <i class="fa-regular fa-heart"></i>
+                        <span>3</span>
+                        <button class="readmore">Read More</button>
+                    </div>
             </div>
     </section>
 
