Add responsiveness for smaller screens

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div id="logocontainer">
             <a href="index.html" aria-label="Go to the main page">
                 <img src="assets/images/logo1.webp" id="logo" alt="site's logo">
-                <h1 id="name">Green Space</h1>
+                <h1 id="logoname">Green Space</h1>
             </a>
         </div>
         <nav id="menucontainer">
@@ -97,17 +97,7 @@
           <h2 id="blogheader">Our <span>Blog</span></h2>
 
           <div id="blogcontent">
-            <!--
-                <div class="bloghighlight">
-                    <img src="assets/images/gallery3.webp" class="blogimage" alt="" aria-labelledby="Picture representing mulching to flowers">
-                    <h4>Maintaining a clean lawn</h4>
-                    <i class="fa-regular fa-comment"></i>
-                    <span>2</span>
-                    <i class="fa-regular fa-heart"></i>
-                    <span>3</span>
-                    <button class="readmore">Read More</button>
-                </div>
-            -->
+            
                 <div class="bloghighlight">
                     <img src="assets/images/justgarden.webp" class="blogimage" alt="" aria-labelledby="Keeping garden tools preserved">
                     <div>
