Adjust the styling in the service section

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <img src="assets/images/slide2.webp" class="image" alt="" aria-labelledby="Picture of a mowing machine at work">
                 <h3 class="subject">Bed Renovation</h3>
                 <p >
-                    Renovating a bed needs a lot of attention and detail for plant, flower or lawn
+                    Renovating a bed needs a lot of attention and detail. We get you all detail required for plant, flower or lawn.
                 </p>
                 <a href="contact.html">Contact Us <i class="fa-solid fa-chevron-right"></i></a>
             </div>
@@ -69,16 +69,6 @@
                 </p> 
                 <a href="contact.html">Contact Us <i class="fa-solid fa-chevron-right"></i></a> 
             </div>
-        <!--
-            <div class="content1">
-                <img src="assets/images/slide3.webp" class="image" alt="" aria-labelledby="Picture of a newly installed lawn">
-                <h3 class="subject">Lawn Installation</h3>
-                <p class="subjectdetail">
-                    We provide all the services from land preparation, fertilizer application up to planting.
-                </p>
-                <a href="contact.html">Contact Us <i class="fa-solid fa-chevron-right"></i></a>
-            </div>
-        -->
 
             <div class="content1">
                 <img src="assets/images/gallery4.webp" class="image" alt="" aria-labelledby="Picture of a wheelbarrow containeing fallen leaves">
@@ -135,7 +125,7 @@
 
     <section id="contact">
         <div id="subject">
-            <h2 id="subsubject"><span>Get in</span> touch</h2>
+            <h2 id="subsubject">Get in touch</h2>
             <p>Want to get in touch? We will love to hear from you. Here's how you can reach us...</p>
         </div>
         <aside id="contact1">
