Add image for the logo, delete some unwanted imagesand modify some form styles

--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
     <header>
         <div id="logocontainer">
             <a href="index.html" aria-label="Go to the main page">
-                <img src="assets/images/logo1.webp" id="logo" alt="site's logo">
+                <img src="assets/images/gar-denlogo1.webp" id="logo" alt="site's logo">
                 <h1 id="name">Green Space</h1>
             </a>
         </div>
@@ -79,7 +79,7 @@
                  </tr>
             </table>
             <label for="message">FURTHER ENQUIRY</label>
-            <textarea id="message" name="message" rows="10" cols="50"  placeholder="Message"></textarea>
+            <textarea id="message" name="message" rows="8" cols="50"  placeholder="Message"></textarea>
                 
             <input type="submit" value="Submit">
         
