--- a/services.html
+++ b/services.html
@@ -14,7 +14,7 @@
     <header>
         <div id="logocontainer">
             <a href="index.html" aria-label="Go to the main page">
-                <img src="assets/images/logo1.webp" id="logo" alt="site's logo">
+                <img src="assets/images/gar-denlogo1.webp" id="logo" alt="site's logo">
                 <h1 id="name">Green Space</h1>
             </a>
         </div>
