--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <p >
                     Renovating a bed needs a lot of attention and detail. We get you all detail required for plant, flower or lawn.
                 </p>
-                <a href="contact.html">Contact Us <i class="fa-solid fa-chevron-right"></i></a>
+                <a href="#">Get Started <i class="fa-solid fa-chevron-right"></i></a>
             </div>
 
             <div class="content1">
@@ -67,7 +67,7 @@
                 <p class="subjectdetail">
                     Mulching is a major step to maintaining your plants. It is a sure way of ensuring plant sustainance.
                 </p> 
-                <a href="contact.html">Contact Us <i class="fa-solid fa-chevron-right"></i></a> 
+                <a href="#">Get Started <i class="fa-solid fa-chevron-right"></i></a> 
             </div>
 
             <div class="content1">
@@ -76,11 +76,12 @@
                 <p class="subjectdetail">
                     Maintenance of plants in spring and fall available. Providing plants with all needs for sustainability.
                 </p>
-                <a href="contact.html">Contact Us <i class="fa-solid fa-chevron-right"></i></a>
+                <a href="#">Get Started <i class="fa-solid fa-chevron-right"></i></a>
             </div>
-
         </div>
-    
+        <div id="moreservice">
+           <a href="services.html">More Services <i class="fa-solid fa-chevron-right"></i></a>
+        </div>
     </section>
 
     <section id="blog">
@@ -148,9 +149,11 @@
 
     <footer>
             <div id="actioncall">
-                 <label for="subscribe">Subscribe to our Newsletter:</label>
-                <input id="subscribe" type="email" name="subscribe" placeholder="Enter your Email">
-                <button type="submit" id="subscribebtn">Submit</button>
+                <form>
+                    <label for="subscribe">Subscribe to our Newsletter:</label>
+                    <input id="subscribe" type="email" name="subscribe" placeholder="Enter your Email">
+                    <button type="submit" id="subscribebtn">Submit</button>
+                </form>
             </div>
     
             <ul id="sociallinks">
