Add responsiveness to smaller screen

--- a/services.html
+++ b/services.html
@@ -15,7 +15,6 @@
         <div id="logocontainer">
             <a href="index.html" aria-label="Go to the main page">
                 <img src="assets/images/gar-denlogo1.webp" id="logo" alt="site's logo">
-                <h1 id="name">Green Space</h1>
             </a>
         </div>
         <nav id="menucontainer">
@@ -57,7 +56,7 @@
                 <div>
                     <h3>Mulching</h3>
                     <p>
-                        Mulching is a major step to maintaining your plants. It is a sure way of ensuring plant sustainance.
+                        Mulching is a major step to maintaining your plants. It is a sure way of sustaining plants.
                     </p>  
                     <a href="#" id="getservice">Get Started <i class="fa-solid fa-chevron-right"></i></a>
                 </div>
@@ -68,7 +67,7 @@
                 <div>
                     <h3>Lawn Installation</h3>
                     <p>
-                        We provide all the services from land preparation, fertilizer application up to planting.
+                        Reliable services from land preparation, fertilizer application up to planting.
                     </p>
                     <a href="#" id="getservice">Get Started <i class="fa-solid fa-chevron-right"></i></a>
                 </div>
@@ -79,7 +78,7 @@
                 <div>
                     <h3>Seasonal Care</h3>
                     <p>
-                        Maintenance of plants in spring and fall available. Providing plants with all needs for sustainability.
+                        Plant maintenance in spring and fall is essential. All plant need for good living.
                     </p>
                     <a href="#" id="getservice">Get Started <i class="fa-solid fa-chevron-right"></i></a>
                 </div>
@@ -90,7 +89,7 @@
                 <div>
                     <h3>Seeding and Sodding</h3>
                     <p>
-                        Whatever stage you are in your green area, we will seed or sod it. The care will provide will leave your green area looking healthy and bright.
+                        Reliable and adequate plant care provision leave your green area looking healthy.
                     </p>
                     <a href="#" id="getservice">Get Started <i class="fa-solid fa-chevron-right"></i></a>
                 </div>
@@ -101,7 +100,7 @@
                 <div>
                     <h3>Sales</h3>
                     <p>
-                        In need of plants to build up your green area?, we offer you reliable source of healthy and carefully selected plants. <a href="contact.html" id="salecontact">Contact Us</a> to make your bookings.
+                       We offer you reliable source of healthy and carefully selected plants. <a href="contact.html" id="salecontact">Contact Us</a> to make your bookings.
                     </p>
                     <a href="#" id="getservice">Get Started <i class="fa-solid fa-chevron-right"></i></a>
                 </div>
